k8s/ingresses/feature/stocks-feat-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stocks-feat-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - $BRANCH.feat.ng.stocks4fun.com
    - $BRANCH.feat.gateway.stocks4fun.com
    secretName: letsencrypt-prod3
  rules:
  - host: $BRANCH.feat.ng.stocks4fun.com
    http:
      paths:
      - backend:
          serviceName: ng-service
          servicePort: 8080
  - host: $BRANCH.feat.gateway.stocks4fun.com
    http:
      paths:
      - backend:
          serviceName: gateway-service
          servicePort: 8080
